# public/api.yaml
@@ -1349,12 +1349,17 @@ paths:
                   type: array
                   items: 
                     type: string
-  /variants/variantparticularproduct:
+  /variants/variantparticularproduct/{product_id}:
       get:
         summary: List the Variants
         description: Optional extended description in CommonMark or HTML.
         tags: 
         - Variants
+        parameters:
+        - in: path
+          name: product_id
+          schema:
+            type: string
         responses:
           '200':    # status code
             description: A JSON array of user names
@@ -1411,28 +1416,6 @@ paths:
           description: variants successfully.
         '404':
           description: variants not found. 
-  /variants/varianbypro/{product_id}:
-    get:
-      summary: variants in a specific variants.
-      description: Retrieves the number of Variants that are currently active in the system.
-      tags:
-        - Variants
-      parameters:
-        - in: path
-          name: product_id
-          schema:
-            type: string
-      responses:
-        '200':
-          description: variants in a specific Variants
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  product_id:
-                    type: string
-                    description: The number of active Variants.
   /variants/list-variant:
       get:
         summary: List the Variants
